@@ -28,6 +28,7 @@
 
 $no_session = true;
 require_once("modules/init.php");
+vauth_session_cookie();
 set_site_preferences();
 
 /* Check for posted username and password */
