@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.3.2-Beta2 
+  	- Fixed cookie code to account for violation of RFC's by IIS 5 where
+		in IIS 5 fails to send cookie header on a header redirect
+		(Thx Paul Webb)
   	- Fixed verification of Batch Downloading, if ZLIB isn't detected it
 		will not even give you the link
   	- Added remember_length which defines the length that a 'remember me'
